Use more EnumMap and Collections.emptyMap to save heap
When dealing with reference datetimes we can use EnumMap.

Refs #99702